修改了直播不能显示等bug